# project_olist_brazilian_e-commerce

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: etl_pipeline.py
include/: extract.py  load.py  transform.py
include/transformed_datasets/: olist_customers_dataset.parquet  olist_order_payments_dataset.parquet  olist_products_dataset.parquet  olist_sellers_dataset.parquet  product_category_name_translation.parquet
